feat: :sparkles: Update index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <header>
-        <h1>¡Bienvenido a Mi Servidor Nginx!</h1>
+        <h1>¡Hola Mundo!</h1>
     </header>
     <main>
         <p>Este es un ejemplo básico de un archivo HTML servido por Nginx.</p>
